--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,7 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.2.*",
-        "way/generators": "~2.0",
-        "laracasts/validation": "~1.0",
-        "fzaninotto/faker": "v1.3.0"
+        "laracasts/validation": "~1.0"
 	},
 	"autoload": {
 		"classmap": [
@@ -40,6 +38,8 @@
 	},
 	"minimum-stability": "stable",
 	"require-dev": {
-		"anahkiasen/rocketeer": "~2.0"
+        "way/generators": "~2.0",
+        "fzaninotto/faker": "dev-master",
+        "anahkiasen/rocketeer": "~2.0"
 	}
 }
